k8s/order-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice
  labels:
    app: orderservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      containers:
        - name: orderservice
          image: docker.io/enricocostanzi/orderservice:0.0.2
          ports:
           - containerPort: 8080
#          readinessProbe:
#            httpGet:
#              path: /actuator/health/readiness
#              port: http
#            initialDelaySeconds: 20
#            periodSeconds: 15
#            failureThreshold: 6
          livenessProbe:
              httpGet:
                path: /actuator/health/liveness
                port: http
              initialDelaySeconds: 120
