k8s/order-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice
  labels:
    app: orderservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      serviceAccountName: jgroups-kubeping-service-account
      containers:
        - name: orderservice
          image: docker.io/enricocostanzi/orderservice:1.5.3
          ports:
           - containerPort: 8080
          resources:
            requests:
              memory: "100Mi"
              cpu: "200m"
            limits:
              memory: "1500Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 6
            periodSeconds: 5
            failureThreshold: 100
          livenessProbe:
              httpGet:
                path: /actuator/health/liveness
                port: 8080
              initialDelaySeconds: 5
              periodSeconds: 5
              failureThreshold: 100
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: orderservice
    spring-boot: "true"
spec:
  selector:
    app: orderservice
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
