k8s/order-service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: orderservice
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
