k8s/product-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productservice
  labels:
    app: productservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: productservice
  template:
    metadata:
      labels:
        app: productservice
    spec:
      containers:
        - name: productservice
          image: docker.io/enricocostanzi/productservice:1.2.2
          ports:
           - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 6
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: productservice
    spring-boot: "true"
spec:
  selector:
    app: productservice
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
