k8s/product-service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: productservice
    spring-boot: "true"
spec:
  selector:
    app: productservice
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
