k8s/admin-server-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminserver
  labels:
    app: adminserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminserver
  template:
    metadata:
      labels:
        app: adminserver
    spec:
      serviceAccountName: spring-boot-admin-sa
      containers:
        - name: adminserver
          image: docker.io/enricocostanzi/adminserver:1.2.2
          ports:
            - containerPort: 8080
#          resources:
#            requests:
#              memory: "100Mi"
#              cpu: "200m"
#            limits:
#              memory: "1500Mi"
#              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /actuator/health #/readiness
              port: 8080
            initialDelaySeconds: 6
            periodSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /actuator/health #/liveness
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: admin-server
  labels:
    app: adminserver
spec:
  selector:
    app: adminserver
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: adminserver
  name: adminserveringress
spec:
  rules:
    - host: admin-server.demo.intesys.net
      http:
        paths:
          - backend:
              serviceName: admin-server
              servicePort: 80
